--- a/oroglobo_parameters.yaml
+++ b/oroglobo_parameters.yaml
@@ -7,27 +7,26 @@
 
 
 paths_in : 
-  srtm30_data:          "data_in/srtm30/"
-  model_grids:          "data_in/model_grids/"
-  model_masks:          "data_in/model_masks/"
-  copernicus_90m:       "/home/guidodavoli/cnr_work/dati/Copernicus_DEM/copernicus_dem_90m_*SECTOR*/"
-  copernicus_lowres:    "/home/guidodavoli/cnr_work/dati/Copernicus_DEM/copernicus_dem_lowres/copernicus_dem_90m_*SECTOR*/"
-  copernicus_highresnc: "/home/guidodavoli/cnr_work/dati/Copernicus_DEM/copernicus_dem_highresnc/copernicus_dem_90m_*SECTOR*/"
+  model_grids:                "data_in/model_grids/"
+  model_masks:                "data_in/model_masks/"
+  copernicus_90m:             "/home/guidodavoli/cnr_work/dati/Copernicus_DEM/copernicus_dem_90m_*SECTOR*/"
+  copernicus_lowresnc:        "/home/guidodavoli/cnr_work/dati/Copernicus_DEM/copernicus_dem_lowresnc/copernicus_dem_90m_*SECTOR*/"
+  copernicus_highresnc:       "/home/guidodavoli/cnr_work/dati/Copernicus_DEM/copernicus_dem_highresnc/copernicus_dem_90m_*SECTOR*/"
+  copernicus_lowresnc_global: "/home/guidodavoli/cnr_work/dati/Copernicus_DEM/copernicus_dem_lowresnc/" 
 
 
 paths_out : 
-  img_out:  "img_out/*GRIDNAME*/"
+  img_out:  "img_out/*GRIDNAME*/" 
   data_out: "data_out/*GRIDNAME*/"
   1km_out:  "data_out/km1/"
 
 
 paths_work : 
   workdir:      "work/"
-  workdir_grid: "work/*GRIDNAME*/"
+  workdir_grid: "work/*GRIDNAME*/" 
 
 
 files_in : 
-  netcdf_srtm30_global_nan_to_zero_0_360: "srtm30_global_nan_to_zero_0_360.nc"
   netcdf_model_mask:                      "masks_*GRIDNAME*.nc"
   netcdf_model_mask_lake:                 "flake_*GRIDNAME*.nc"
   txt_model_grid_lat:                     "*GRIDNAME*_lat.txt"
@@ -35,11 +34,12 @@ files_in :
   tif_copernicus_90m:                     "Copernicus_DSM_30_*HEMISPHERE-NS**LAT2DIGITS*_00_*HEMISPHERE-EW**LON3DIGITS*_00_DEM.tif"
   netcdf_copernicus_lowres:               "Copernicus_DSM_30_*HEMISPHERE-NS**LAT2DIGITS*_00_*HEMISPHERE-EW**LON3DIGITS*_00_DEM.tif.nc"
   netcdf_copernicus_global_0_360:         "CopernicusGlobal_float32_0_360.nc"
+  netcdf_copernicus_lowres_global:        "copernicus_lowresnc_global.nc" 
 
 
 files_out : 
-  img_1km_global_orog:                "1km_global_orog.png"
-  img_1km_global_orog_smooth:         "1km_global_orog_smooth.png"
+  img_1km_global_orog:                "1km_global_orog.png" 
+  img_1km_global_orog_smooth:         "1km_global_orog_smooth.png" 
   img_model_grid_orog:                "model_grid_orog_*GRIDNAME*.png"
   img_model_grid_operational_orog:    "model_grid_operational_orog_*GRIDNAME*.png"
   netcdf_model_grid_operational_orog: "model_grid_operational_orog_*GRIDNAME*.nc"
@@ -49,26 +49,29 @@ files_out :
 
 
 files_work : 
-  netcdf_1km_smooth_orog: "1km_global_orog_smooth_to_*GRIDNAME*.nc"
+  netcdf_1km_smooth_orog: "1km_global_orog_smooth_to_*GRIDNAME*.nc" 
   netcdf_model_grid_orog: "model_grid_orog_*GRIDNAME*.nc"
 
 model_grid : 
-  GRIDNAME:           "globo_KM078"
-  gridspacing_max_km: 78
+  GRIDNAME:           "globo_KM078"         
+  gridspacing_max_km: 78                     
 
 
 filtering_1km_ecmwf : 
-  d:               1 # [km]
-  Cfilt_max_zonal: 3
-  CN_minmax:       3
+  d:               1 # [km] 
+  Cfilt_max_zonal: 3        
+  CN_minmax:       3        
 
 
 filtering_Ndx_ecmwf : 
-  d:   1 # [pixel]
-  Ndx: 2 # [pixel]
+  d:   1 # [pixel] 
+  Ndx: 2 # [pixel] 
 
+parallel_execution:
+  Nparal: 4 
 
-
+plotting:
+  dpi: 600 
 
 #USER MANUAL
 
