--- a/oroglobo_parameters.yaml
+++ b/oroglobo_parameters.yaml
@@ -9,16 +9,15 @@
 paths_in : 
   model_grids:                "data_in/model_grids/"
   model_masks:                "data_in/model_masks/"
-  copernicus_90m:             "/home/guidodavoli/cnr_work/dati/Copernicus_DEM/copernicus_dem_90m_*SECTOR*/"
-  copernicus_lowresnc:        "/home/guidodavoli/cnr_work/dati/Copernicus_DEM/copernicus_dem_lowresnc/copernicus_dem_90m_*SECTOR*/"
-  copernicus_highresnc:       "/home/guidodavoli/cnr_work/dati/Copernicus_DEM/copernicus_dem_highresnc/copernicus_dem_90m_*SECTOR*/"
-  copernicus_lowresnc_global: "/home/guidodavoli/cnr_work/dati/Copernicus_DEM/copernicus_dem_lowresnc/" 
+  copernicus_90m:             "Copernicus_DEM/copernicus_dem_90m_*SECTOR*/"
+  copernicus_lowresnc:        "Copernicus_DEM/copernicus_dem_lowresnc/copernicus_dem_90m_*SECTOR*/"
+  copernicus_highresnc:       "Copernicus_DEM/copernicus_dem_highresnc/copernicus_dem_90m_*SECTOR*/"
+  copernicus_lowresnc_global: "Copernicus_DEM/copernicus_dem_lowresnc/" 
 
 
 paths_out : 
   img_out:  "img_out/*GRIDNAME*/" 
   data_out: "data_out/*GRIDNAME*/"
-  1km_out:  "data_out/km1/"
 
 
 paths_work : 
@@ -33,7 +32,6 @@ files_in :
   txt_model_grid_lon:                     "*GRIDNAME*_lon.txt"
   tif_copernicus_90m:                     "Copernicus_DSM_30_*HEMISPHERE-NS**LAT2DIGITS*_00_*HEMISPHERE-EW**LON3DIGITS*_00_DEM.tif"
   netcdf_copernicus_lowres:               "Copernicus_DSM_30_*HEMISPHERE-NS**LAT2DIGITS*_00_*HEMISPHERE-EW**LON3DIGITS*_00_DEM.tif.nc"
-  netcdf_copernicus_global_0_360:         "CopernicusGlobal_float32_0_360.nc"
   netcdf_copernicus_lowres_global:        "copernicus_lowresnc_global.nc" 
 
 
@@ -45,7 +43,6 @@ files_out :
   netcdf_model_grid_operational_orog: "model_grid_operational_orog_*GRIDNAME*.nc"
   netcdf_model_grid_ogwd_params:      "model_grid_ogwd_params_*GRIDNAME*.nc"
   netcdf_model_grid_tofd_params:      "model_grid_tofd_params_*GRIDNAME*.nc"
-  netcdf_1km_grid_orog_out:           "km1_global_orog.nc"
 
 
 files_work : 
@@ -53,8 +50,8 @@ files_work :
   netcdf_model_grid_orog: "model_grid_orog_*GRIDNAME*.nc"
 
 model_grid : 
-  GRIDNAME:           "globo_KM078"         
-  gridspacing_max_km: 78                     
+  GRIDNAME:           "globo_KM019"         
+  gridspacing_max_km: 19                     
 
 
 filtering_1km_ecmwf : 
@@ -104,7 +101,7 @@ plotting:
 #    THIS SECTIONS CONTAINS THE PARAMETERS USED TO ADDITIONALLY SMOOTH THE MODEL
 #    MEAN OROGRAPHY. THIS CAN BE NECESSARY FOR EXAMPLE BECAUSE OF MODEL INSTABILITIES
 #    WITH TOO STEEP OROGRAPHY, OR TO MATCH THE EFFECTIVE OROGRAPHIC RESOLUTION
-#    OF THE MODEL (KANEHAMA ET AL)
+#    OF THE MODEL (KANEHAMA ET AL 2019)
 
 #    d: the lenght of the filter edge. [pixels]    
     
